--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,49 +8,10 @@
 <div class="container">
     <br>
 
-    <h1>Cartelera</h1>
-    <hr>
 
-    <div class="row">
-
-        <div class="col-sm-6">
-
-            <div class="row" *ngIf="cartelera">
-                <div class="col-md-12 div-pic-1 puntero" [ngStyle]="{ 'background-image': 'url( '+ (cartelera[0] | peliculaImagen) +' )'  }">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-6 div-pic-2 puntero" [ngStyle]="{ 'background-image': 'url( '+ (cartelera[1] | peliculaImagen) +' )'  }">
-                </div>
-                <div class="col-sm-6 div-pic-2 puntero" [ngStyle]="{ 'background-image': 'url( '+ (cartelera[2] | peliculaImagen) +' )'  }">
-                </div>
-            </div>
-
-        </div>
-
-        <div class="col-sm-6">
-
-
-            <div class="row">
-                <div class="col-sm-6 div-pic-2 puntero" [ngStyle]="{ 'background-image': 'url( '+ (cartelera[3] | peliculaImagen) +' )'  }">
-                </div>
-                <div class="col-sm-6 div-pic-2 puntero" [ngStyle]="{ 'background-image': 'url( '+ (cartelera[4] | peliculaImagen) +' )'  }">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12 div-pic-1 puntero" [ngStyle]="{ 'background-image': 'url( '+ (cartelera[5] | peliculaImagen) +' )'  }">
-                </div>
-            </div>
-
-        </div>
-
-
-
-
-
-    </div>
+    <app-galeria [peliculas]="cartelera|slice:0:6" titulo="Películas En Cartelera"></app-galeria>
+    <app-galeria [peliculas]="populares|slice:0:6" titulo="Películas Populares"></app-galeria>
+    <app-galeria [peliculas]="ninos|slice:0:6" titulo="Películas Populares Entre los Niños"></app-galeria>
 
 
 </div>
