--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,24 @@
-<p>search works!</p>
+<div class="container main-container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label>Buscar</label>
+                <input [(ngModel)]="buscar" type="text" class="form-control" name="buscar" (keyup.enter)="buscarPelicula()" placeholder="Buscar una película">
+            </div>
+        </div>
+    </div>
+
+    <div class="row animated fadeIn fast">
+        <div class="card-columns">
+            <div class="card" *ngFor="let pelicula of ps.peliculas">
+                <img [src]="pelicula|peliculaImagen" class="card-img-top" alt="pelicula.original_title">
+                <div class="card-body">
+                    <h5 class="card-title">{{ pelicula.original_title }}</h5>
+                    <p class="card-text text-justify">{{ pelicula.overview | slice:0:250 }}...</p>
+                    <button [routerLink]="['/pelicula', pelicula.id,'search',buscar]" type="button" class="btn btn-outline-primary btn-block"> Ver Mas..</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
