--- a/src/app/components/pelicula/pelicula.component.html
+++ b/src/app/components/pelicula/pelicula.component.html
@@ -1,1 +1,24 @@
-<p>pelicula works!</p>
+<div *ngIf="pelicula" class="container main-container animated fadeIn fast">
+    <h1>{{ pelicula.original_title }}</h1>
+    <div class="row">
+        <div class="col-md-5">
+            <img class="img-thumbnail img-fluid" [src]="pelicula|peliculaImagen:true" [alt]="pelicula.original_title">
+        </div>
+        <div class="col-md-7">
+            <h3>Sinopsis</h3>
+            <hr>
+            <p class="text-justify">
+                {{ pelicula.overview }}
+            </p>
+            <h3>Frase celebre</h3>
+            <p>
+                {{pelicula.tagline}}
+            </p>
+            <p>
+                Calificación: <span class="badge badge-primary">{{ pelicula.vote_average}}/10</span>
+            </p>
+            <button [routerLink]="['/' + regresarA, busqueda]" type="button" class="btn btn-outline-danger">Regresar</button>
+
+        </div>
+    </div>
+</div>
